(fix) gas price select text wrap

--- a/src/assets/stylesheets/v2.0/components/_GasPriceInput.scss
+++ b/src/assets/stylesheets/v2.0/components/_GasPriceInput.scss
@@ -34,6 +34,10 @@ $sw-GasPriceInput_Select-height: 40px;
     font-size: 16px;
     font-weight: 400;
     line-height: 1.2;
+    max-width: calc(124% - 80px);
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .sw-GasPriceInput_SelectButtonChevron {
